--- a/AbstractClassSubmissionAssignment/AbstractClassSubmissionAssignment/AbstractClassSubmissionAssignment.csproj
+++ b/AbstractClassSubmissionAssignment/AbstractClassSubmissionAssignment/AbstractClassSubmissionAssignment.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{25E45016-E235-4A11-973A-6845698F7E89}</ProjectGuid>
+    <ProjectGuid>{C699E9D1-45A5-495F-A2E7-0503D800BD85}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>_21GameClassesAndObjects</RootNamespace>
-    <AssemblyName>21GameClassesAndObjects</AssemblyName>
+    <RootNamespace>AbstractClassSubmissionAssignment</RootNamespace>
+    <AssemblyName>AbstractClassSubmissionAssignment</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,14 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Card.cs" />
-    <Compile Include="Dealer.cs" />
-    <Compile Include="Deck.cs" />
-    <Compile Include="Game.cs" />
-    <Compile Include="Player.cs" />
+    <Compile Include="Employee.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TwentyOneGame.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
