--- a/OverloadOperatorsSubmissionAssignment/OverloadOperatorsSubmissionAssignment/OverloadOperatorsSubmissionAssignment.csproj
+++ b/OverloadOperatorsSubmissionAssignment/OverloadOperatorsSubmissionAssignment/OverloadOperatorsSubmissionAssignment.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{25E45016-E235-4A11-973A-6845698F7E89}</ProjectGuid>
+    <ProjectGuid>{FF639198-1E5D-4793-BB7F-0EEC3C934441}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>_21GameClassesAndObjects</RootNamespace>
-    <AssemblyName>21GameClassesAndObjects</AssemblyName>
+    <RootNamespace>OverloadOperatorsSubmissionAssignment</RootNamespace>
+    <AssemblyName>OverloadOperatorsSubmissionAssignment</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,15 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Card.cs" />
-    <Compile Include="Dealer.cs" />
-    <Compile Include="Deck.cs" />
-    <Compile Include="Game.cs" />
-    <Compile Include="IWalkAway.cs" />
-    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TwentyOneGame.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
