--- a/21GameClassesAndObjects/21GameClassesAndObjects/21GameClassesAndObjects.csproj
+++ b/21GameClassesAndObjects/21GameClassesAndObjects/21GameClassesAndObjects.csproj
@@ -49,9 +49,12 @@
     <Compile Include="Game.cs" />
     <Compile Include="IWalkAway.cs" />
     <Compile Include="Player.cs" />
+    <Compile Include="Practice.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TwentyOneDealer.cs" />
     <Compile Include="TwentyOneGame.cs" />
+    <Compile Include="TwentyOneRules.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
