--- a/TryCatchAssignment/TryCatchAssignment/TryCatchAssignment.csproj
+++ b/TryCatchAssignment/TryCatchAssignment/TryCatchAssignment.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{02FA9F49-A49C-42E7-9816-6F283ED9B0E2}</ProjectGuid>
+    <ProjectGuid>{EE793461-B64D-4EDD-AC9A-A512E315CCBA}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>ConstructorSubmissionAssignment</RootNamespace>
-    <AssemblyName>ConstructorSubmissionAssignment</AssemblyName>
+    <RootNamespace>TryCatchAssignment</RootNamespace>
+    <AssemblyName>TryCatchAssignment</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,8 +43,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Employee.cs" />
-    <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
